# Fractals

./: .gitignore  CMakeLists.txt  README.md  icon.h  main.c
Compiling/: icon48.rc
Constants/: constants.h
Multithread/: multithread.c  multithread.h
Resources/: icon.h  resources.rc
Tree/: tree.c  tree.h
Welcome/: welcome.c  welcome.h
XORShift32/: xor_shift32.h
